src/objects/Partner__c.object
<CustomObject>
    <description>Object to link partner programs together</description>
    <fields>
        <fullName>Default_DM_Flex_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default DM Flex Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_DM_Fuel_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Default DM Fuel Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Sales_Code__c</fullName>
        <description>Code used to access to the BOCA To Prospect application for two-factor security purposes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Sales Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_BOCA_Form_Link__c</fullName>
        <formula>HYPERLINK(&apos;https://&apos; + $Label.External_Instance_URL + &apos;/creditapplication/PartnerBOCAToProspect&apos; + &apos;?partner=&apos; + Name, &quot;BOCA Form&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner BOCA Form Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partner_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The short name used in URL&apos;s to identify the partner (Example: CircleK) with no spaces.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The short name used in URL&apos;s to identify the partner (Example: CircleK) with no spaces.</inlineHelpText>
        <label>Partner Key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Partner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Default_DM_Flex_Code__c</columns>
        <columns>Default_DM_Fuel_Code__c</columns>
        <columns>External_Sales_Code__c</columns>
        <columns>Partner_Key__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>